# analysis.mosep-analysis

./: .gitignore  .ruff.toml  README.md  install_dependencies.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
develop/: dash_test.py  import_test.py  lidarpacket_test.py  open3d_GUI_crop.py  open3d_crop.py  rosbags_test.py  timeit_template.py
notebooks/: 1.0_cg_compare_pc_statistics.ipynb  1.0_cg_target_definition.ipynb  1.0_cg_target_intensity_analysis.ipynb  1.1_cg_model_intensity_reduction.ipynb  1.2_cg_noise_ring_analysis.ipynb  ml-data.ipynb  model_intensity_reduction.ipynb  read_from_mcap.ipynb  target_statistics_lidar.ipynb
notebooks/papermill/: execute_notebooks.py  inspect_notebooks.py
notebooks/target_analysis/: 1.1_cg_target_analysis_0.ipynb  1.1_cg_target_analysis_104.ipynb  1.1_cg_target_analysis_12.ipynb  1.1_cg_target_analysis_17.ipynb  1.1_cg_target_analysis_39.ipynb  1.1_cg_target_analysis_48.ipynb  1.1_cg_target_analysis_7.ipynb  1.1_cg_target_analysis_template.ipynb
src/config/: precipitation_codes.py
src/data/: config.py  extract_pcs_from_bagfile.py  get_pointcloud_data.py  get_timeseries_data.py  load_timeseries_data.py  make_dataset.py  pc_statistics.py  pointcloud_processing.py  timeseries_processing.py  utils.py
src/data/get_metadata_from_bagfile/: get_metadata_from_bagfiles.py  sensor_setup.yaml
src/mosep_analysis/data/: config.py  utils.py
src/tools/: create_parquet_files_from_pc.py  fix_ros2_metadata_file.py
src/visualization/: dash_apps.py  timeseries.py  utils_3d.py
(+4 files in other folders)
